--- a/turbo.json
+++ b/turbo.json
@@ -1,8 +1,6 @@
 {
   "$schema": "https://turborepo.org/schema.json",
-  "globalDependencies": [
-    "**/.env"
-  ],
+  "globalDependencies": ["**/.env"],
   "globalEnv": [
     "OPEN_WEATHER_API_KEY",
     "UPSTASH_REDIS_REST_URL",
@@ -12,24 +10,17 @@
     "UPSTASH_RATELIMITER_EXCLUDED_IPS",
     "RESEND_API_KEY",
     "QWEATHER_API_KEY",
-    "API_NINJA_API_KEY",
     "TEST_MODE",
     "NEXT_PUBLIC_CONVEX_URL",
     "CONVEX_DEPLOY_KEY"
   ],
-  "globalPassThroughEnv": [
-    "CONVEX_URL"
-  ],
+  "globalPassThroughEnv": ["CONVEX_URL"],
   "tasks": {
     "topo": {
-      "dependsOn": [
-        "^topo"
-      ]
+      "dependsOn": ["^topo"]
     },
     "build": {
-      "dependsOn": [
-        "^build"
-      ],
+      "dependsOn": ["^build"],
       "outputs": [
         ".next/**",
         "!.next/cache/**",
@@ -43,9 +34,7 @@
       "cache": false
     },
     "format": {
-      "outputs": [
-        "node_modules/.cache/.prettiercache"
-      ],
+      "outputs": ["node_modules/.cache/.prettiercache"],
       "outputLogs": "new-only"
     },
     "dev:test": {
@@ -55,25 +44,15 @@
       "cache": false
     },
     "e2e:test": {
-      "dependsOn": [
-        "^build"
-      ]
+      "dependsOn": ["^build"]
     },
     "lint": {
-      "dependsOn": [
-        "^topo"
-      ],
-      "outputs": [
-        "node_modules/.cache/.eslintcache"
-      ]
+      "dependsOn": ["^topo"],
+      "outputs": ["node_modules/.cache/.eslintcache"]
     },
     "typecheck": {
-      "dependsOn": [
-        "^topo"
-      ],
-      "outputs": [
-        "node_modules/.cache/tsbuildinfo.json"
-      ]
+      "dependsOn": ["^topo"],
+      "outputs": ["node_modules/.cache/tsbuildinfo.json"]
     },
     "clean": {
       "cache": false
